[be] fixed auth page

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-PORT=4200
+PORT=4200;
+DB_USR=node-express;
+DB_PWD=node-express;
+DB_URI=mongodb+srv://node-express:node-express@cluster0-qajvx.mongodb.net/shop?retryWrites=true&w=majority;
