--- a/package.json
+++ b/package.json
@@ -4,23 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node index.js --debug"
+    "start": "nodemon --watch src --delay 1 --exec 'ts-node' src/server.ts --debug",
+    "lint": "tslint -p tsconfig.json -c tslint.json"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^3.2.0",
+    "connect-mongodb-session": "^2.3.1",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.17.0",
     "handlebars": "^4.7.3",
-    "mongoose": "^5.9.3",
-    "uuid": "^7.0.1"
+    "mongoose": "^5.9.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.7",
-    "@babel/node": "^7.8.7",
-    "@babel/preset-env": "^7.8.7",
-    "nodemon": "^2.0.2"
+    "@types/connect-mongo": "^3.1.3",
+    "@types/connect-mongodb-session": "^0.0.2",
+    "@types/express": "^4.17.3",
+    "@types/express-handlebars": "^3.1.0",
+    "@types/express-session": "^1.17.0",
+    "@types/mongoose": "^5.7.7",
+    "@types/node": "^12.12.31",
+    "nodemon": "^2.0.2",
+    "ts-node": "^8.8.1",
+    "typescript": "^3.8.3"
   }
 }
